# Ervos

./: README.md  case.step  case_old.stl  servo_serial.ino
macros/: deathmoon.gdr.json  decode.gdr.json  ditchedmachine.gdr.json  extinction.gdr.json  fakeadoom.gdr.json  fakeamight.gdr.json  x.gdr.json  zip_lash.gdr.json  zodiac.gdr.json
src/: servo_serial.ino
src/arduino/: ervos.ino  ervos_old.ino  servo_serial.ino
src/geode/: CMakeLists.txt  mod.json
src/geode/src/: mackingCheese.hpp  main_better.cpp  main_old.cpp
src/geode/src/serial_library/include/: SerialPort.hpp
src/geode/src/serial_library/src/: SerialPort.cpp
src/python/: macro_generator.py
